--- a/css/cssnews.css
+++ b/css/cssnews.css
@@ -7,6 +7,14 @@ body{
 	font-size:40px;
 }
 
+#base_header div div div h1{
+	text-align:center;
+	font-size:22px;
+	padding-bottom: 50px;
+	text-decoration: underline;
+
+}
+
 .section_title{
 	font-size:20px;
 	padding-left:15px;
@@ -25,7 +33,22 @@ body{
 }
 
 .section{
+	margin-top:10px;
 	border: ridge 20px #d83113;
 	border-radius: 20px;
 	background-color: #ee3e4e;
+}
+
+#button1{
+	margin-top:20px;
+}
+
+
+#button2{
+	margin-top:20px;
+}
+
+
+#button3{
+	margin-top:20px;
 }
